[gd_scene load_steps=7 format=2]

[ext_resource path="res://data/sprites/interface_background.png" type="Texture" id=1]
[ext_resource path="res://scenes/UI.gd" type="Script" id=2]
[ext_resource path="res://data/sprites/interface_gauge.png" type="Texture" id=3]
[ext_resource path="res://data/themes/theme.tres" type="Theme" id=5]
[ext_resource path="res://data/sprites/interface_attempt_bar.png" type="Texture" id=9]
[ext_resource path="res://data/sprites/interface_attempt_arrow.png" type="Texture" id=10]

[node name="UI" type="Node2D" groups=["uis"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 42, 24 )
texture = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 15.0
margin_right = 84.0
margin_bottom = 14.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 5 )
text = "0"
align = 2

[node name="SpriteAttemptBar" type="Sprite" parent="."]
position = Vector2( 42, 24 )
texture = ExtResource( 9 )

[node name="SpriteAttemptArrow" type="Sprite" parent="."]
position = Vector2( 42, 9 )
texture = ExtResource( 10 )

[node name="SpriteGauge" type="Sprite" parent="."]
position = Vector2( 42, 24 )
texture = ExtResource( 3 )

[node name="GaugeLabel" type="Label" parent="."]
margin_left = 1.0
margin_top = 35.0
margin_right = 70.0
margin_bottom = 49.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 5 )
text = "Sus"

[node name="GaugeFilled" type="ColorRect" parent="."]
margin_left = 18.0
margin_top = 38.0
margin_right = 30.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )

[node name="ActionLeftLabel" type="Label" parent="."]
margin_left = 7.0
margin_top = 41.0
margin_right = 76.0
margin_bottom = 55.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 5 )
text = "Left"

[node name="ActionRightLabel" type="Label" parent="."]
margin_left = 7.0
margin_top = 41.0
margin_right = 78.0
margin_bottom = 55.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 5 )
text = "Right
"
align = 2
